--- a/modelo_mlflow.ipynb
+++ b/modelo_mlflow.ipynb
@@ -230,6 +230,24 @@
    "source": [
     "mlflow.search_runs()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos arrancar la UI de mlflow ejecutando en consola:\n",
+    "```\n",
+    "mlflow ui\n",
+    "```\n",
+    "La interfaz estará en http://localhost:5000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
